overflow issues fixed for popup menu

--- a/style.css
+++ b/style.css
@@ -172,10 +172,11 @@ body {
 /* Work Pop up Menu */
 .pop_up_menu {
   display: flex;
+  padding-top: 20px;
+  padding-bottom: 20px;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  padding: 20px 30px 20px 30px;
   background: #FFFFFF;
   border: 1px solid #EBECF0;
   box-shadow: 0px 48px 48px rgba(37, 47, 137, 0.08);
@@ -258,7 +259,7 @@ body {
 
 .pop_menu_btn {
   display: flex;
-  width: 100%;
+  max-width: 100%;
   justify-content: space-around;
   font-family: 'Inter';
   align-items: center;
@@ -701,8 +702,10 @@ footer {
  }
 
  .pop_menu_img  {
-  width: 50%;
   padding-right: 20px;
+  /* max-width: 100%; */
+  height: auto;
+  width: 50%;
 
  }
 
